examples/invalid/08_struct_missing_field.lane
module Examples.Invalid08
// invalid: struct literals must provide every field
pub struct Point {
  x : Int
  y : Int
}

pub let point : Point = Point::{ x: 1 }
